--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@aws-sdk/client-polly": "^3.282.0",
-        "@discordjs/opus": "^0.9.0",
-        "@discordjs/voice": "^0.16.0",
-        "discord.js": "^14.8.0",
-        "dotenv": "^16.0.3",
-        "libsodium-wrappers": "^0.7.11",
-        "mongoose": "^7.0.2",
-        "prismjs": "^1.29.0",
-        "sodium": "^3.0.2",
-        "tesseract.js": "^4.1.1"
+        "@aws-sdk/client-polly": "3.940.0",
+        "@discordjs/opus": "0.10.0",
+        "@discordjs/rest": "2.6.0",
+        "@discordjs/voice": "0.19.0",
+        "@snazzah/davey": "0.1.8",
+        "discord.js": "14.25.1",
+        "dotenv": "17.2.3",
+        "mongoose": "7.0.2",
+        "tesseract.js": "4.1.1"
     },
     "devDependencies": {
-        "ts-node": "^10.9.1",
-        "typescript": "^4.9.5"
+        "prettier": "3.7.2",
+        "ts-node": "10.9.2",
+        "typescript": "5.9.3"
     }
 }
